# graphalytics-platforms-graphmat

./: .gitignore  README.md  build.sh  pom.xml  prepare-benchmark.sh  run-graphmat.sh
config-template/: driver.properties  graphmat.properties  platform.properties  system.properties
granula-model-graphmat/: pom.xml
granula-model-graphmat/src/main/java/nl/tudelft/pds/granula/: GraphMatArchiver.java
granula-model-graphmat/src/main/java/nl/tudelft/pds/granula/modeller/graphmat/: GraphMatType.java
granula-model-graphmat/src/main/java/nl/tudelft/pds/granula/modeller/graphmat/job/: GraphMat.java
granula-model-graphmat/src/main/java/nl/tudelft/pds/granula/modeller/graphmat/operation/: BspSuperstep.java  GraphMatJob.java  LoadGraph.java  OffloadGraph.java  ProcessGraph.java  TopActorTopMission.java
granula-model-graphmat/src/main/resources/graphmat-logs/OperationLog/: driver.logs
graphalytics-platforms-graphmat-granula/: pom.xml
graphalytics-platforms-graphmat-granula/src/main/java/nl/tudelft/granula/modeller/: ModelTester.java
graphalytics-platforms-graphmat-granula/src/main/java/nl/tudelft/granula/modeller/platform/operation/: LoadGraph.java
graphalytics-platforms-graphmat-granula/src/main/java/nl/tudelft/graphalytics/graphmat/: GraphMatGranulaPlatform.java
graphalytics-platforms-graphmat-granula/src/main/java/nl/tudelft/graphalytics/graphmat/reporting/logging/: GraphMatLogger.java
graphalytics-platforms-graphmat-granula/src/main/resources/: graphmat.model
graphalytics-platforms-graphmat-platform/: pom.xml
graphalytics-platforms-graphmat-platform/src/main/c/: CMakeLists.txt  bfs.cpp  cd.cpp  common.hpp  conn.cpp  granula.hpp  lcc.cpp  pr.cpp  sssp.cpp
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/: GraphConverter.java  GraphMatJob.java  GraphMatPlatform.java  OutputConverter.java
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/bfs/: BreadthFirstSearchJob.java
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/cdlp/: CommunityDetectionLPJob.java
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/lcc/: LocalClusteringCoefficientJob.java
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/pr/: PageRankJob.java
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/sssp/: SingleSourceShortestPathJob.java
graphalytics-platforms-graphmat-platform/src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/wcc/: WeaklyConnectedComponentsJob.java
graphalytics-platforms-graphmat-platform/src/main/resources/: log4j2.xml
graphalytics-platforms-graphmat-std/: pom.xml
script/: integration-test.sh
sh/: build.sh  prepare-benchmark.sh
src/main/assembly/: bin.xml
src/main/c/: CMakeLists.txt  bfs.cpp  cd.cpp  common.hpp  conn.cpp  format_convert.cpp  granula.hpp  lcc.cpp  pr.cpp  sssp.cpp
src/main/java/nl/tudelft/granula/modeller/: ModelTester.java  Type.java
src/main/java/nl/tudelft/granula/modeller/platform/operation/: BspSuperstep.java  GraphmatJob.java  ProcessGraph.java
src/main/java/nl/tudelft/granula/modeller/rule/extraction/: GraphmatExtractionRule.java
src/main/java/nl/tudelft/graphalytics/graphmat/: GraphConverter.java  GraphMatJob.java  GraphMatPlatform.java  GraphParser.java  GraphmatJob.java  GraphmatPlatform.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/bfs/: BreadthFirstSearchJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/cdlp/: CommunityDetectionLPJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/lcc/: LocalClusteringCoefficientJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/pr/: PageRankJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/sssp/: SingleSourceShortestPathJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/stats/: StatsJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/algorithms/wcc/: WeaklyConnectedComponentsJob.java
src/main/java/nl/tudelft/graphalytics/graphmat/config/: JobConfiguration.java  JobConfigurationParser.java
src/main/java/nl/tudelft/graphalytics/graphmat/granula/modeller/platform/: GraphMat.java  Graphmat.java
src/main/java/nl/tudelft/graphalytics/graphmat/reporting/logging/: GraphMatLogger.java  GraphalyticLogger.java
src/main/java/science/atlarge/granula/modeller/: ModelTester.java  Type.java
src/main/java/science/atlarge/granula/modeller/platform/: Graphmat.java
src/main/java/science/atlarge/granula/modeller/platform/operation/: BspSuperstep.java  GraphmatJob.java  LoadGraph.java  OffloadGraph.java  ProcessGraph.java
src/main/java/science/atlarge/granula/modeller/rule/extraction/: GraphmatExtractionRule.java
src/main/java/science/atlarge/graphalytics/graphmat/: GraphConverter.java  GraphmatJob.java  GraphmatPlatform.java  OutputConverter.java
src/main/java/science/atlarge/graphalytics/graphmat/algorithms/bfs/: BreadthFirstSearchJob.java
src/main/java/science/atlarge/graphalytics/graphmat/algorithms/cdlp/: CommunityDetectionLPJob.java
src/main/java/science/atlarge/graphalytics/graphmat/algorithms/lcc/: LocalClusteringCoefficientJob.java
src/main/java/science/atlarge/graphalytics/graphmat/algorithms/pr/: PageRankJob.java
src/main/java/science/atlarge/graphalytics/graphmat/algorithms/sssp/: SingleSourceShortestPathJob.java
src/main/java/science/atlarge/graphalytics/graphmat/algorithms/wcc/: WeaklyConnectedComponentsJob.java
src/main/resources/: graphmat.platform  log4j2.xml
src/main/resources/c/: cd.cpp  common.hpp  config.cmake  conn.cpp  lcc.cpp
(+2 files in other folders)
